@@ -1,3 +1,13 @@
+2002-04-18  Jody Goldberg <jody@gnome.org>
+
+	* accessibility-keyboard.c (setup_accessX_dialog) : Use 'clicked'
+	  rather than 'activated' for the file sel.
+
+2002-04-10  Jody Goldberg <jody@gnome.org>
+
+	* gnome-accessibility-keyboard-properties.glade2 (</) : slim down the
+	  tooltips.
+
 Wed Apr 10 18:02:29 2002  Jonathan Blandford  <jrb@gnome.org>
 
 	* accessibility-keyboard.desktop.in (Exec): s/gnome2/gnome
